--- a/config.json
+++ b/config.json
@@ -1,9 +1,47 @@
 {
     "feature":[ 
         {"name": "sBP", "file_name": "vitals/bp.csv", "feature_type": "vital"},
+        {"name": "dBP", "file_name": "vitals/bp.csv", "feature_type": "vital"},
+        {"name": "hr", "file_name": "vitals/hr.csv", "feature_type": "vital"},
         {"name": "rr", "file_name": "vitals/rr.csv", "feature_type": "vital"},
-        {"name": "wbc", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo", "NA_methods": "Categorical", "NA_breaks":[10,20,30,100]},
-        {"name": "magnesium", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"}
+        {"name": "saturation", "file_name": "vitals/saturation.csv", "feature_type": "vital"},
+        {"name": "temp", "file_name": "vitals/temp.csv", "feature_type": "vital"},
+        {"name": "urine", "file_name": "vitals/urine.csv", "feature_type": "vital"},
+        {"name": "wbc", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "rbc", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "hb", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "hct", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "mcv", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "mch", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "mchc", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "plt", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "rbw", "file_name": "CBC_Coag_Chemo/cbc.csv", "feature_type": "labo"},
+        {"name": "tp", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "alb", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "ast", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "alt", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "ld", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "ALP", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "gGTP", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "t_bil", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "i_bil", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "ck", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "ck_mb", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "bun", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "cre", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "eGFR", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "sodium", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "potassium", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "chrol", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "glu", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "crp", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "calcium", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "magnesium", "file_name": "CBC_Coag_Chemo/chemo.csv", "feature_type": "labo"},
+        {"name": "bnp", "file_name": "CBC_Coag_Chemo/coag.csv", "feature_type": "labo"},
+        {"name": "pt_inr", "file_name": "CBC_Coag_Chemo/coag.csv", "feature_type": "labo"},
+        {"name": "pt", "file_name": "CBC_Coag_Chemo/coag.csv", "feature_type": "labo"},
+        {"name": "pt_sec", "file_name": "CBC_Coag_Chemo/coag.csv", "feature_type": "labo"},
+        {"name": "aptt", "file_name": "CBC_Coag_Chemo/coag.csv", "feature_type": "labo"}
     ],
 
     "Vital_setting":{
@@ -17,20 +55,20 @@
     "Labo_setting":{
         "n_timepoints" : 2,
         "n_timepoints_per_day" : 1,
-        "n_offset_timepoints" : 0,
+        "n_offset_timepoints" : 1,
         "NA_methods" : "Imputation",
         "NA_breaks" : []
     },
 
-    "model_param":{},
+    "model_param":{"n_estimators" : 100},
 
     "learning_param":{
-        "pos_train_ratio" : 0.8,
         "neg_train_ratio" : 1.0,
-        "neg_test_ratio" : 10.0,
         "n_models" : 10,
-        "csv_root" : "/Users/liyuanxu/Dropbox/automet/data/train_190312/",
-        "n_target_timepoints_per_day": 3
+        "n_repeat" : 100,
+        "train_csv_root" : "/Users/liyuanxu/Dropbox/automet/data/train_190312/",
+        "test_csv_root" : "/Users/liyuanxu/Dropbox/automet/data/test_190312/",
+        "n_target_timepoints_per_day": 3,
+        "max_target_timepoint_gap": 1
     }
-
 }
