--- a/config.json
+++ b/config.json
@@ -49,7 +49,8 @@
         "n_timepoints_per_day" : 3,
         "n_offset_timepoints" : 1,
         "NA_methods" : "Imputation",
-        "NA_breaks" : []
+        "NA_breaks" : [],
+        "search_for_imputation" : 0
     },
 
     "Labo_setting":{
@@ -57,7 +58,8 @@
         "n_timepoints_per_day" : 1,
         "n_offset_timepoints" : 1,
         "NA_methods" : "Imputation",
-        "NA_breaks" : []
+        "NA_breaks" : [],
+        "search_for_imputation" : 7
     },
 
     "model_param":{"n_estimators" : 100},
